2008-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* icons/rcss.icns:
	* qt4/qt4.pro:
	- added an icon file for Mac OS X.

	* NEWS:
	* configure.ac:
	* qt4/field_canvas.cpp:
	* qt4/main_window.cpp:
	* qt4/player_type_dialog.cpp:
	- supported Qt-4.1.0.
	- updated NEWS file.

	* qt4/disp_holder.cpp:
	* qt4/main_window.cpp:
	* qt4/monitor_server.cpp:
	* qt4/options.cpp:
	* rcsslogplayer/parser.cpp:
	* rcsslogplayer/parser.h:
	- implemented simple monitor client. Now, rcsslogplayer can be
	used as a simple proxy server.

	* configure.ac:
	* qt4/log_player_tool_bar.cpp:
	* qt4/log_slider_tool_bar.cpp:
	* qt4/main_window.cpp:
	* qt4/player_painter.cpp:
	- supported Qt-4.2.0.

	* qt4/image_save_dialog.cpp:
	- fixed a defect about saved directory selection.

2008-04-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/player_painter.cpp:
	- disabled shortcut key help message for Windows.
	- tuned darker color.

2008-04-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/rcg2xml.cpp:
	- fixed gcc-4.2 warning.

	* classic/Makefile.am:
	* qt4/Makefile.am:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	- added missing disttarget files.
	- fixed incorrect settings.

2008-04-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* qt4/main_window.cpp:
	* qt4/options.cpp:
	- fixed defects about setting read/write.
	- fixed defects about canvas size on the initialization.

	* qt4/main_data.cpp:
	- fixed a defect about a return characther code.

	* qt4/main_window.cpp:
	- added an automatic directry setting to open the output file.

	* qt4/main_data.cpp:
	- implemented automatic file exteantion appending for an output
	file name.

	* qt4/config_dialog.cpp:
	- changed a layout.

	* qt4/config_dialog.h:
	* qt4/field_canvas.cpp:
	* qt4/field_canvas.h:
	* qt4/main_data.cpp:
	- implemented a player selection by mouse clicking.

	* qt4/log_player.cpp:
	* qt4/main_window.cpp:
	* qt4/options.cpp:
	* qt4/qt4.pro:
	* qt4/rcsslogplayer.rc: